--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" href="css/isdisright.css">
-        <link rel="stylesheet2" href="css/styles.css">
+        <link rel="stylesheet" href="css/isdisright.css" type="text/css">
+        <link rel="stylesheet" href="css/styles.css" type="text/css">
     </head>
     <body>
         <div class ="topbar">
             <nav class = "menubar">
                 <a class= "Logo" href="index.html">
-                    <img src="images/logo.png" style="width:80px;" title="Home" alt="Home">
+                    <img src="images/logo.png" style="height:40px;" title="Home" alt="Home">
                 </a>
                 <a class= "Home" href="index.html">
                     <p class="menutext">HOME</p>
                 </a>
-                <a class= "Profile" href="index.html">
+                <a class= "Profile" href="pages/profile.html">
                     <p class="menutext">Profile</p>
                 </a>
                 <a class= "Contact-Us" href="index.html">
@@ -24,9 +24,30 @@
                 </a>
             </nav>
         </div>
-        <div class="starting-point">
-            <img src="images/logo.png" style="width:50%;">
-            <p>Hi! I'm Mary Yssabelle Hermosa, a Computer Science student with way too much free time, thus this website! Hover your mouse along the bottom of the window to open the navigation panel.</p>
+        <div class="starter">
+            <div class="items">
+                <img src="images/logo.png" style="width:50%;">
+                <p>Hi! I'm Mary Yssabelle Hermosa, a Computer Science student with way too much free time, thus this website! Hover your mouse along the bottom of the window to open the navigation panel.</p>
+            </div>
+        </div>
+        <div class="footer">
+            <div class ="namecol">
+            <img src="images/end.png" style="height:30px;">
+            </div>
+            <div class ="cc">
+            <p class="footertext">© 2020 Mary Yssabelle Hermosa</p>
+            </div>
+            <div class ="socialmedia">
+                <a class="smedialink" href="https://twitter.com/mryyssabelle">
+                    <img src="images/icons/twitter.svg" style="width:40px;" title="Pictures" alt="Pictures">
+                </a>
+                <a class="smedialink" href="https://github.com/myssabelle">
+                    <img src="images/icons/github.svg" style="width:40px;" title="Pictures" alt="Pictures">
+                </a>
+                <a class="smedialink" href="https://www.facebook.com/aizahbel">
+                    <img src="images/icons/fb.svg" style="width:40px;" title="Pictures" alt="Pictures">
+                </a>
+            </div>
         </div>
     </body>
 </html>
