Final home and profile, and test contact page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" href="css/isdisright.css" type="text/css">
+        <link rel="stylesheet" href="css/home.css" type="text/css">
         <link rel="stylesheet" href="css/styles.css" type="text/css">
     </head>
     <body>
@@ -11,31 +11,77 @@
                     <img src="images/logo.png" style="height:40px;" title="Home" alt="Home">
                 </a>
                 <a class= "Home" href="index.html">
-                    <p class="menutext">HOME</p>
+                    <p class="menutext1">HOME</p>
                 </a>
                 <a class= "Profile" href="pages/profile.html">
-                    <p class="menutext">Profile</p>
+                    <p class="menutext2">Profile</p>
                 </a>
-                <a class= "Contact-Us" href="index.html">
-                    <p class="menutext">Contact Us</p>
+                <a class= "Contact-Us" href="pages/contact.html">
+                    <p class="menutext2">Contact Us</p>
                 </a>
                 <a class= "Facebook" href="https://www.facebook.com/aizahbel">
-                    <p class="menutext">Facebook</p>
+                    <p class="menutext2">Facebook</p>
                 </a>
             </nav>
         </div>
+
         <div class="starter">
             <div class="items">
                 <img src="images/logo.png" style="width:50%;">
-                <p>Hi! I'm Mary Yssabelle Hermosa, a Computer Science student with way too much free time, thus this website! Hover your mouse along the bottom of the window to open the navigation panel.</p>
+                <p>Hi! I'm Mary Yssabelle Hermosa, a Computer Science student with way too much free time, thus this website!
+                    This home page is just a bunch of random things that I personally recommend! The year has given me more free
+                    time than usual, and that resulted in a lot of Netflix hours. A lot. So here's totally non-biased recommendations
+                    from an average consumer. <br><br>The navigation appears as you scroll down. Welcome to my totally amateur website!
+                </p>
             </div>
         </div>
+
+        <div class="content">
+            <h2 class="head">2020 Media Favorites</h2>
+            <div class="cols">
+                <div class="box">
+                    <h2 class="head2">Grey's Anatomy</h2>
+                    <img src="images/homepics/greys.jpeg" class="poster">
+                </div>
+
+                <div class="box">
+                    <h2 class="head2">Fireforce</h2>
+                    <img src="images/homepics/fireforce.jpg" class="poster">
+                </div>
+
+                <div class="box">
+                    <h2 class="head2">Umbrella Academy</h2>
+                    <img src="images/homepics/umbrella.jpg" class="poster">
+                </div>
+            </div>
+        </div>
+
+        <div class="content">
+            <h2 class="head">2020 Musical Favorites</h2>
+            <div class="cols">
+                <div class="box">
+                    <h2 class="head2">Addam's Family</h2>
+                    <img src="images/homepics/addams.png" class="poster">
+                </div>
+
+                <div class="box">
+                    <h2 class="head2">Heathers</h2>
+                    <img src="images/homepics/heathers.png" class="poster">
+                </div>
+
+                <div class="box">
+                    <h2 class="head2">Beetlejuice</h2>
+                    <img src="images/homepics/beetlejuice.png" class="poster">
+                </div>
+            </div>
+        </div>
+
         <div class="footer">
             <div class ="namecol">
             <img src="images/end.png" style="height:30px;">
             </div>
             <div class ="cc">
-            <p class="footertext">© 2020 Mary Yssabelle Hermosa</p>
+            <p class="footertext">© 2020 Hermosa Inc. All rights reserved.<br>
             </div>
             <div class ="socialmedia">
                 <a class="smedialink" href="https://twitter.com/mryyssabelle">
@@ -49,5 +95,6 @@
                 </a>
             </div>
         </div>
+        <script src="js/home.js"></script>
     </body>
 </html>
