--- a/pages/profile.html
+++ b/pages/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title>ME</title>
+            <title>Profile</title>
             <link rel="stylesheet" href="../css/profile.css">
             <link rel="stylesheet" href="../css/styles.css">
         </head>
@@ -12,16 +12,16 @@
                         <img src="../images/logo.png" style="height:40px;" title="Home" alt="Home">
                     </a>
                     <a class= "Home" href="../index.html">
-                        <p class="menutext">HOME</p>
+                        <p class="menutext2">HOME</p>
                     </a>
                     <a class= "Profile" href="profile.html">
-                        <p class="menutext">Profile</p>
+                        <p class="menutext1">Profile</p>
                     </a>
-                    <a class= "Contact-Us" href="../index.html">
-                        <p class="menutext">Contact Us</p>
+                    <a class= "Contact-Us" href="contact.html">
+                        <p class="menutext2">Contact Us</p>
                     </a>
                     <a class= "Facebook" href="https://www.facebook.com/aizahbel">
-                        <p class="menutext">Facebook</p>
+                        <p class="menutext2">Facebook</p>
                     </a>
                 </nav>
             </div>
@@ -34,7 +34,72 @@
                 <div class ="self">
                     <div class='icondiv'></div>
                     <p id ="selfdes" class = "selfdes">
-                        Hey! I’m Mary Yssabelle Hermosa, a second year Computer Science student at Cebu Institute of Technology - University. I dabble in web design, and I do graphics occasionally for organization-related work. Quarantine has given me way too much time, so here I am. My hobbies include writing, filmography and directing, piano and watching too many shows on netflix. Nice to meet you!
+                        Hey! I’m Mary Yssabelle Hermosa, a second year Computer Science student at Cebu Institute of Technology
+                        - University. I dabble in web design, and I do graphics occasionally for organization-related work.
+                        Quarantine has given me way too much time, so here I am. My hobbies include writing, filmography and
+                        directing, piano and watching too many shows on netflix. Nice to meet you!
+                    </p>
+                </div>
+                <div class="firstbox">
+                    <h2 class="firsthead">Little Bits of Me</h2>
+                    <p class=firsttext>My main belief in life is that you are never just one thing. Who I am today is a result
+                        of millions of decisions made by me and for me, and a stereotype or a simple word cannot possibly
+                        contain the complexities of a human being. I am a Computer Science student, yes, that is true. But
+                        growing up, I loved theater, music, photography, and many other things that aren’t totally inline
+                        with my career choice. Right now, I’m in different organizations that are totally different at their
+                        cores. And I wouldn’t have it any other way.<br><br>
+                        I am 20. And for the past two decades, I wouldn’t, and I couldn’t possibly say that I have done much
+                        of anything worth mentioning. Much like everyone, I spent most of my life in school. And because I liked
+                        to join as many activities as I could, I was in school a lot more than an average kid. And although I’ve
+                        learned a lot of things, and skills during these times, I also missed out on a lot of other things. When
+                        my cousins were going out to go to the beach, I was in my room pretending to study. When my friends played
+                        hooky, I was probably working on some extracurricular. My family is full of workaholics, and I mirrored
+                        that growing up. I wasn’t a perfect kid by any means, but most of my life has been dedicated into academics.
+                        Now, I still have those traits at my core, but I’ve decided to live a little. I buy that dress I’ve been
+                        wanting for a while. I treat myself whenever I’m getting burned out. I go to parties and events with my
+                        friends. Get that night of sleep when I know I need it. I laugh a little, and live a little.
+                    </p>
+                </div>
+
+                <div class="secondbox">
+                    <h2 class="secondhead">My Second Homes</h2>
+                    <p class=secondtext>My main belief in life is that you are never just one thing. Who I am today is a result
+                        of millions of decisions made by me and for me, and a stereotype or a simple word cannot possibly
+                        contain the complexities of a human being. I am a Computer Science student, yes, that is true. But
+                        growing up, I loved theater, music, photography, and many other things that aren’t totally inline
+                        with my career choice. Right now, I’m in different organizations that are totally different at their
+                        cores. And I wouldn’t have it any other way.<br><br>
+                        I am 20. And for the past two decades, I wouldn’t, and I couldn’t possibly say that I have done much
+                        of anything worth mentioning. Much like everyone, I spent most of my life in school. And because I liked
+                        to join as many activities as I could, I was in school a lot more than an average kid. And although I’ve
+                        learned a lot of things, and skills during these times, I also missed out on a lot of other things. When
+                        my cousins were going out to go to the beach, I was in my room pretending to study. When my friends played
+                        hooky, I was probably working on some extracurricular. My family is full of workaholics, and I mirrored
+                        that growing up. I wasn’t a perfect kid by any means, but most of my life has been dedicated into academics.
+                        Now, I still have those traits at my core, but I’ve decided to live a little. I buy that dress I’ve been
+                        wanting for a while. I treat myself whenever I’m getting burned out. I go to parties and events with my
+                        friends. Get that night of sleep when I know I need it. I laugh a little, and live a little.
+                    </p>
+                </div>
+                
+                <div class="thirdbox">
+                    <h2 class="thirdhead">Jack of all Trades</h2>
+                    <p class=thirdtext>My main belief in life is that you are never just one thing. Who I am today is a result
+                        of millions of decisions made by me and for me, and a stereotype or a simple word cannot possibly
+                        contain the complexities of a human being. I am a Computer Science student, yes, that is true. But
+                        growing up, I loved theater, music, photography, and many other things that aren’t totally inline
+                        with my career choice. Right now, I’m in different organizations that are totally different at their
+                        cores. And I wouldn’t have it any other way.<br><br>
+                        I am 20. And for the past two decades, I wouldn’t, and I couldn’t possibly say that I have done much
+                        of anything worth mentioning. Much like everyone, I spent most of my life in school. And because I liked
+                        to join as many activities as I could, I was in school a lot more than an average kid. And although I’ve
+                        learned a lot of things, and skills during these times, I also missed out on a lot of other things. When
+                        my cousins were going out to go to the beach, I was in my room pretending to study. When my friends played
+                        hooky, I was probably working on some extracurricular. My family is full of workaholics, and I mirrored
+                        that growing up. I wasn’t a perfect kid by any means, but most of my life has been dedicated into academics.
+                        Now, I still have those traits at my core, but I’ve decided to live a little. I buy that dress I’ve been
+                        wanting for a while. I treat myself whenever I’m getting burned out. I go to parties and events with my
+                        friends. Get that night of sleep when I know I need it. I laugh a little, and live a little.
                     </p>
                 </div>
             </div>
@@ -44,7 +109,7 @@
                 <img src="../images/end.png" style="height:30px;">
                 </div>
                 <div class ="cc">
-                <p class="footertext">© 2020 Mary Yssabelle Hermosa</p>
+                <p class="footertext">© 2020 Hermosa Inc. All rights reserved.</p>
                 </div>
                 <div class ="socialmedia">
                     <a class="smedialink" href="https://twitter.com/mryyssabelle">
@@ -58,6 +123,6 @@
                     </a>
                 </div>
             </div>
-
+            <script src="../js/profile.js"></script>
         </body>
     </html>
