--- a/pages/contact.html
+++ b/pages/contact.html
@@ -30,29 +30,16 @@
             <div class="box">
                 <div class="content">
                     <h2 class="head">Something to say?</h2>
-                    <!--<div class="col">
-                        <p class="name">Name</p>
-                        <input type="text">
-                        <p class="email">Email</p>
-                        <input type="email">
-                        <p class="message">Message</p>
-                        <textarea name="message"></textarea>
-                        <br>
-                        <input type="submit" value="Submit">
-                    </div>
-                    <div class="col">
-                        <img src="../images/giphy.gif" style="width:400px">
-                    </div> -->
                     <form action="POST" data-netlify="true">
                         <div class="fields">
                             <div class="fieldhalf">
-                                <input class="name" type="text" name="name" id="name" placeholder="NAME"/>
+                                <input class="name" type="text" name="name" id="name" placeholder="Name"/>
                             </div>
                             <div class="fieldhalf">
-                                <input class="email"type="email" name="email" id="email" placeholder="EMAIL"/>
+                                <input class="email"type="email" name="email" id="email" placeholder="Email"/>
                             </div>
                             <div class="field">
-                                <textarea class="message" name="message" id="message" placeholder="MESSAGE" rows="7"></textarea>
+                                <textarea class="message" name="message" id="message" placeholder="Message" rows="7"></textarea>
                             </div>
                             <div class="field">
                                 <div data-netlify-recaptcha="true"></div>
@@ -63,6 +50,7 @@
                     
                 </div>
                 <p class="statement">Forms powered by Netlify.</p>
+                <p class="statement">All data collected will only be for personal use.</p>
             </div>
         </div>
 
