--- a/pages/profile.html
+++ b/pages/profile.html
@@ -63,43 +63,52 @@
 
                 <div class="secondbox">
                     <h2 class="secondhead">My Second Homes</h2>
-                    <p class=secondtext>My main belief in life is that you are never just one thing. Who I am today is a result
-                        of millions of decisions made by me and for me, and a stereotype or a simple word cannot possibly
-                        contain the complexities of a human being. I am a Computer Science student, yes, that is true. But
-                        growing up, I loved theater, music, photography, and many other things that aren’t totally inline
-                        with my career choice. Right now, I’m in different organizations that are totally different at their
-                        cores. And I wouldn’t have it any other way.<br><br>
-                        I am 20. And for the past two decades, I wouldn’t, and I couldn’t possibly say that I have done much
-                        of anything worth mentioning. Much like everyone, I spent most of my life in school. And because I liked
-                        to join as many activities as I could, I was in school a lot more than an average kid. And although I’ve
-                        learned a lot of things, and skills during these times, I also missed out on a lot of other things. When
-                        my cousins were going out to go to the beach, I was in my room pretending to study. When my friends played
-                        hooky, I was probably working on some extracurricular. My family is full of workaholics, and I mirrored
-                        that growing up. I wasn’t a perfect kid by any means, but most of my life has been dedicated into academics.
-                        Now, I still have those traits at my core, but I’ve decided to live a little. I buy that dress I’ve been
-                        wanting for a while. I treat myself whenever I’m getting burned out. I go to parties and events with my
-                        friends. Get that night of sleep when I know I need it. I laugh a little, and live a little.
+                    <p class=secondtext>I’ve been to a total of five different schools. My preschool was at Sacred Heart, a very
+                        small tight-knit Catholic school with a huge playground. (Huge for tiny little-me, but tiny for adult-me)
+                        I remember very little of my time there, with my highlights being: (1) a boy I had a crush on named Oscar
+                        (can’t remember his face), and (2) being pushed to the ground on my ‘graduation’, and busted my chin open,
+                        leaving a huge scar. Fun times. Then I moved into a slightly bigger tight-knit school, only this time it was
+                        a Protestant school. (MLBCS - Matilda L. Bradford Christian School) I have more memories here than my previous
+                        school, but it feels very distant. I moved before I could graduate with my batch, so I wasn’t really part of the
+                        ‘nostalgia’ most of my batch feels when they think about Bradford. In 6th grade, I move to a big school, USC.
+                        It’s not at all how it’s portrayed. I think within the walls of the schools, kids are wild, dishonest and
+                        rambunctious. I stayed there for 5 years, all throughout high school. I knew a lot of people, but my friend group
+                        was pretty small. A lot of family and personal issues later, I moved to a small school for senior high - STI. 2
+                        years there felt like 10. There was only one section and it felt like everyday had all these moments and memories
+                        that I still remember and love. There was a lot of drama, but I think I learned the most in those two years, that
+                        in the previous 10. A lot of it was probably thanks to this teacher who never stopped believing in me, despite my
+                        darkest hours. I represented the school in competitions nationwide in both years, and did well for a ‘senior high
+                        school’ student competing with college juniors and seniors.<br>
+                        <br>Today, I am at CIT University, and it has been a whirlwind. I think the past year has been extremely
+                        high and low that I cannot begin to tell the story. Maybe after a few years, when my story here ends,
+                        I can.
                     </p>
                 </div>
                 
                 <div class="thirdbox">
                     <h2 class="thirdhead">Jack of all Trades</h2>
-                    <p class=thirdtext>My main belief in life is that you are never just one thing. Who I am today is a result
-                        of millions of decisions made by me and for me, and a stereotype or a simple word cannot possibly
-                        contain the complexities of a human being. I am a Computer Science student, yes, that is true. But
-                        growing up, I loved theater, music, photography, and many other things that aren’t totally inline
-                        with my career choice. Right now, I’m in different organizations that are totally different at their
-                        cores. And I wouldn’t have it any other way.<br><br>
-                        I am 20. And for the past two decades, I wouldn’t, and I couldn’t possibly say that I have done much
-                        of anything worth mentioning. Much like everyone, I spent most of my life in school. And because I liked
-                        to join as many activities as I could, I was in school a lot more than an average kid. And although I’ve
-                        learned a lot of things, and skills during these times, I also missed out on a lot of other things. When
-                        my cousins were going out to go to the beach, I was in my room pretending to study. When my friends played
-                        hooky, I was probably working on some extracurricular. My family is full of workaholics, and I mirrored
-                        that growing up. I wasn’t a perfect kid by any means, but most of my life has been dedicated into academics.
-                        Now, I still have those traits at my core, but I’ve decided to live a little. I buy that dress I’ve been
-                        wanting for a while. I treat myself whenever I’m getting burned out. I go to parties and events with my
-                        friends. Get that night of sleep when I know I need it. I laugh a little, and live a little.
+                    <p class=thirdtext>As you might have figured from above, I usually try to give 100% to anything I commit
+                        myself to. Over the years, with the hundreds of projects and presentations I worked on, I picked up a
+                        few things. I learned to film, and edit videos. I learned to write scripts, presentations and essays.
+                        (I reached nationals in an essay competition too.) I learned to design and code. And I think I am pretty
+                        good at most of these things. I picked up all of these skills because of necessity. I wanted anything that
+                        had my name on it to reach high standards, thus needing these skills. (Not gonna lie, they were times where
+                        I just felt defeated and just gave up because I couldn’t do it. Situations like these usually end up with me 
+                        depressed over a low grade lmao) The point is, I never took on these skills as a hobby, or as an interest.
+                        Therefore, I never really invested much time other than what it took to finish a project. So I’m not great
+                        at it. I don’t think I’m great at anything at all. Thus, I am a ‘Jack’. I am no king or queen, I am not the
+                        best or the greatest at anything or everything. I simply am a ‘Jack’, walking down whatever path I find myself
+                        on, picking up the skills along the way. If you'd like to see a few of my works, you can contact me in the Contact Us page.<br>
+                        <br>Now because of my workaholic nature, I usually never had any time to invest into my interests or
+                        hobbies. If I did have the time, I was probably too exhausted to try. This is one of my biggest regrets
+                        in life. A lot of the people I know found a hobby or two that they liked, by the time they reached high
+                        school. Some found it earlier on, while I’m here being a ‘Jack’. A few things that I like doing is playing
+                        the piano, reading a good book, design clothes, and playing with makeup. Totally out of character of a
+                        typical ‘programmer’. I also like to play tabletop games, but it’s hard to find people to play with so I
+                        don’t do it often. A lot of my hobbies are something I do to pass the time, or to chill. None of them are
+                        particularly fueled by passion, so I’m not really good at it either.<br>
+                        <br>I guess that’s it? I figure there is so much more to tell, but even I don’t know all of the
+                        complexities of my personality. Well, there’s the rest of the decade to figure it out.
                     </p>
                 </div>
             </div>
