--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,7 +8,7 @@
 
         <div class ="topbar">
             <nav class = "menubar">
-                <a class= "Logo" href="index.html">
+                <a class= "Logo" href="../index.html">
                     <img src="../images/logo.png" style="height:40px;" title="Home" alt="Home">
                 </a>
                 <a class= "Home" href="../index.html">
