--- a/pages/page2.html
+++ b/pages/page2.html
@@ -1,30 +1,30 @@
 <html>
     <head>
         <title>Home</title>
-        <link rel="stylesheet" href="css/mainStyle.css" type="text/css">
-        <link rel="stylesheet" href="css/page1.css" type="text/css">
-        <link rel="stylesheet" href="css/styles.css" type="text/css">
+        <link rel="stylesheet" href="../css/mainStyle.css" type="text/css">
+        <link rel="stylesheet" href="../css/styles.css" type="text/css">
     </head>
     <body>
-        <div class = "whole">
+
+        <div class="whole">
             <div class ="topbar">
                 <nav class = "menubar">
-                    <a class= "Logo" href="index.html">
-                        <img src="images/logo.png" style="height:40px;" title="Home" alt="Home">
+                    <a class= "Logo" href="../index.html">
+                        <img src="../images/logo.png" style="height:40px;" title="Home" alt="Home">
                     </a>
-                    <a class= "navlink" href="index.html">
-                        <p class="menutext1">1</p>
+                    <a class= "navlink" href="../index.html">
+                        <p class="menutext2">1</p>
                     </a>
-                    <a class= "navlink" href="pages/page2.html">
-                        <p class="menutext2">2</p>
+                    <a class= "navlink" href="page2.html">
+                        <p class="menutext1">2</p>
                     </a>
-                    <a class= "navlink" href="pages/page3.html">
+                    <a class= "navlink" href="page3.html">
                         <p class="menutext2">3</p>
                     </a>
-                    <a class= "navlink" href="pages/page4.html">
+                    <a class= "navlink" href="page4.html">
                         <p class="menutext2">4</p>
                     </a>
-                    <a class= "navlink" href="pages/page5.html">
+                    <a class= "navlink" href="page5.html">
                         <p class="menutext2">5</p>
                     </a>
                 </nav>
@@ -32,68 +32,66 @@
 
             <div class="starter">
                 <div class="items">
-                    <img src="images/logo.png" style="width:50%;">
+                    <img src="../images/logo.png" style="width:50%;">
                     <p>Hey! Javascript isn't something I'm very comfortable with, but here they are! Each box 
                         will lead you to their corresponding pages.<br><br>The navigation bar appears as you scroll down.
                         Welcome to my totally amateur website!
                     </p>
                 </div>
                 <div class = "pages">
-                    <div class ="pagebox" id="present">
-                        <a class = "pagelink" href="index.html">
+                    <div class ="pagebox">
+                        <a class = "pagelink" href="../index.html">
                         <p class = "pagetitle">1</p>
                         </a>
                     </div>
-                    <div class ="pagebox">
-                        <a class = "pagelink" href="pages/page2.html">
+                    <div class ="pagebox" id="present">
+                        <a class = "pagelink" href="page2.html">
                             <p class = "pagetitle">2</p>
                         </a>
                     </div>
                     <div class ="pagebox">
-                        <a class = "pagelink" href="pages/page3.html">
+                        <a class = "pagelink" href="page3.html">
                             <p class = "pagetitle">3</p>
                         </a>
                     </div>
                     <div class ="pagebox">
-                        <a class = "pagelink" href="pages/page4.html">
+                        <a class = "pagelink" href="page4.html">
                             <p class = "pagetitle">4</p>
                         </a>
                     </div>
                     <div class ="pagebox">
-                        <a class = "pagelink" href="pages/page5.html">
+                        <a class = "pagelink" href="page5.html">
                             <p class = "pagetitle">5</p>
                         </a>
                     </div>
                 </div>
             </div>
-
             <div class ="JS">
-                <div class="content" id="page1content"></div>
+                <div class="content" id="page2content"></div>
             </div>
         </div>
-
-
+        
         <div class="footer">
             <div class ="namecol">
-            <img src="images/end.png" style="height:30px;">
+            <img src="../images/end.png" style="height:30px;">
             </div>
             <div class ="cc">
             <p class="footertext">© 2020 Hermosa Inc. All rights reserved.<br>
             </div>
             <div class ="socialmedia">
                 <a class="smedialink" href="https://twitter.com/mryyssabelle">
-                    <img src="images/icons/twitter.svg" style="width:40px;" title="Pictures" alt="Pictures">
+                    <img src="../images/icons/twitter.svg" style="width:40px;" title="Pictures" alt="Pictures">
                 </a>
                 <a class="smedialink" href="https://github.com/myssabelle">
-                    <img src="images/icons/github.svg" style="width:40px;" title="Pictures" alt="Pictures">
+                    <img src="../images/icons/github.svg" style="width:40px;" title="Pictures" alt="Pictures">
                 </a>
                 <a class="smedialink" href="https://www.facebook.com/aizahbel">
-                    <img src="images/icons/fb.svg" style="width:40px;" title="Pictures" alt="Pictures">
+                    <img src="../images/icons/fb.svg" style="width:40px;" title="Pictures" alt="Pictures">
                 </a>
             </div>
         </div>
-        
-        <script src="js/page1.js"></script>
-        <script src="js/nav.js"></script>
+
+        <script src="../js/page2.js"></script>
+        <script src="../js/nav.js"></script>
     </body>
 </html>
